Apply suggestions from code review
Co-authored-by: Nicolas Rol <nicolas.rol@rte-france.com>
Signed-off-by: Matthieu SAUR <matthieu.saur@rte-france.com>